[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/HoS_1.png" type="Texture" id=1]
[ext_resource path="res://tscn/Title.gd" type="Script" id=2]
[ext_resource path="res://assets/BG_Black.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/monogram.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 4 )

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 958, 539 )
scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -13.0
margin_top = -3.0
margin_right = 1907.0
margin_bottom = 1077.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Game" type="Button" parent="Control"]
anchor_left = 0.51
anchor_top = 0.391
anchor_right = 0.917
anchor_bottom = 0.528
margin_left = -0.200073
margin_top = -0.280029
margin_right = 0.359863
margin_bottom = -0.23999
custom_fonts/font = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="How_to_Play" type="Button" parent="Control"]
anchor_left = 0.509
anchor_top = 0.579
anchor_right = 0.916
anchor_bottom = 0.716
margin_left = -0.280029
margin_top = -0.320068
margin_right = 0.279907
margin_bottom = -0.280029
custom_fonts/font = SubResource( 1 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_Game" type="Button" parent="Control"]
anchor_left = 0.508
anchor_top = 0.77
anchor_right = 0.916
anchor_bottom = 0.901
margin_left = 0.639954
margin_top = 0.399963
margin_right = -0.720093
margin_bottom = 6.91998
custom_fonts/font = SubResource( 1 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgBlack" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 955.625, 569.5 )
scale = Vector2( 2.41278, 2.27816 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Control/Start_Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="Control/How_to_Play" to="." method="_on_How_to_Play_pressed"]
[connection signal="pressed" from="Control/Quit_Game" to="." method="_on_Quit_Game_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
